--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.6.4",
+    "@babel/core": "^7.6.4",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/register": "^7.6.2",
     "@wdio/cli": "^5.15.0",
     "@wdio/local-runner": "^5.15.0",
     "@wdio/mocha-framework": "^5.15.0",
