--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@wdio/mocha-framework": "^5.15.0",
     "@wdio/spec-reporter": "^5.14.5",
     "@wdio/sync": "^5.14.4",
+    "chai": "^4.2.0",
     "chromedriver": "^77.0.0",
     "wdio-chromedriver-service": "^5.0.2"
   }
